# internet-auction-parser

./: Cargo.toml  build.rs
src/: avito_parser.rs  book.rs  db.rs  lot.rs  main.rs  style.css  window.rs
src/resources/: window.ui
src/window/: imp.rs
