[package]
name = "internet_auction_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.13.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
chrono = "0.2"
image = "0.24.5"
gtk = { version = "0.5.1", package = "gtk4" }

[build-dependencies]
glib-build-tools = "0.16.3"
